--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           >Get Started</a
         >
         <!--Hamburger icon-->
-        <button id="menu-btn" class="flex hamgurger  focus:outine-none">
+        <button id="menu-btn" class="flex hidden hamgurger  focus:outine-none">
           <span class="hamburger-top"></span>
           <span class="hamburger-middle"></span>
           <span class="hamburger-bottom"></span>
